--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,6 @@ RUN npm install
 # # Copy the rest of the application code
 COPY . .
 
-RUN npm run build
 
-CMD [ "npm", "run", "preview" ]
+CMD [ "npm", "run", "dev" ]
 
